--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,10 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-
-}
-
-
 html {
     font-size: 62.5%;
+    
 }
 
-body{
-    background-color: #f5f5f5;
-    font-size: 62.5%;
+body {
+    background-color: #f5f5f5; 
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -20,22 +12,22 @@ body{
     display: block;
     width: 100vw;
     margin: 0 auto;
-
 }
 
 .container {
     display: block;
     float: left;
     padding: 20px;
-    width: 100%;
+    max-width: 100%;
     margin: 0 auto;
+    max-width: 1198px;
 }
 
 header {
     background: #fff;
     display: block;
-    padding: 20px;
     float: left;
+    padding: 20px;
     width: 100%;
     border-bottom: 1px solid #254159;
 }
@@ -50,15 +42,13 @@ h2 {
     font-size: 2rem;
     color: #254159;
     margin-bottom: 20px;
-
 }
 
 h3 {
     font-size: 1.8rem;
     color: #254159;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     padding-top: 10px;
-
 }
 
 h4 {
@@ -66,13 +56,33 @@ h4 {
     color: #385874;
     margin-bottom: 10px;
     padding-top: 10px;
-
 }
 
-p{
-    margin-bottom: 20px;
+p {
+    margin-bottom: 10px;
     line-height: 1.4;
     color: #333;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+#tenho-interesse {
+    background-color: #b8c8d6;
+    width: 100%;
+}
+
+#tenho-interesse form,
+.cognito.c-med .c-forms-form,
+.cognito.c-med .c-forms-form div {
+    background-color: #b8c8d6 !important;
+}
+
+#tenho-interesse .cognito .c-forms-form .c-forms-form-title h2,
+#tenho-interesse .cognito label[for], .cognito input[type=radio], .cognito input[type=checkbox] {
+    color: #385874;
 }
 
 ol {
@@ -88,7 +98,7 @@ section {
     background-color: #fff;
     display: block;
     float: left;
-    font-size: 1.5rem /* equivalente a 15px*/;
+    font-size: 1.5rem; /* equivalente a 15px */ 
     padding: 20px;
     width: 100%;
 }
@@ -97,14 +107,12 @@ section nav {
     display: block;
     float: left;
     width: 30%;
-    
 }
 
 nav li {
     background-color: #efefef;
     margin: 1px 20px 1px 0;
     padding: 10px;
-    list-style: none;
 }
 
 nav li:hover {
@@ -124,19 +132,17 @@ section article {
     display: block;
     float: left;
     width: 70%;
-   
 }
 
 footer {
-    background-color: #254159;
-    color: #ffffff;
+    background-color: #254159;  
     display: block;
     float: left;
-    width: 100%;
     padding: 20px;
+    width: 100%;
 }
 
-footer p{
+footer p {
     color: #ffffff;
     font-size: 1.4rem;
 }
@@ -146,19 +152,19 @@ footer small {
     display: block;
 }
 
-@media (max-width: 1000px) {
-    .main-container{
-        min-width: 325px;
-    } 
+.cognito {
+    height: 350px !important;
+    overflow: hidden !important;
 }
 
-.imagem img {  
-    width: 90%;
+@media (max-width: 425px) {
+    section nav,
+    section article {
+        width: 100%;
+    }  
+
+    .container {
+        padding-left: 1%;
+        padding-right: 1%;
     }
-
-
-
-
-
-
-  
+}
