git commit pronto

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 html {
     font-size: 62.5%;
     
@@ -72,6 +78,7 @@ img {
 #tenho-interesse {
     background-color: #b8c8d6;
     width: 100%;
+    
 }
 
 #tenho-interesse form,
@@ -132,7 +139,7 @@ nav a:hover {
 section article {
     display: block;
     float: left;
-    width: 100%;
+    width: 70%;
 }
 
 footer {
@@ -162,37 +169,32 @@ footer small {
     section nav,
     section article {
     width: 100%;
-    
-  
-      
-    }  
-
-    @media (max-width: 425px) {
-        section nav li {
-            text-align: center;
-            width: 80%;
-            float: none;
-        }
     }
 
-   @media (max-width: 425px) {
-       section article{
-           width: 100%;
-           
-        }
+    section nav li {
+        text-align: center;
+        width: 80%;
+       
+    }
+      .cognito {
+    height: 350px !important;
+    overflow: hidden !important;
+}
+     
+    #tenho-interesse {
+        justify-content: center;
+        width: 100%;
+        text-align: center;
 
-        #tenho-interesse{
-            width: 100%;
-            align-content: center;
-            text-align: center;
-        }
-           
-        footer {
+    }
+    
+    footer {
             width: 100%;
             text-align: center;
+            justify-content: center;
 
            }
-   }
+   
 
     .container {
         padding-left: 1%;
