--- a/css/style.css
+++ b/css/style.css
@@ -16,24 +16,26 @@ body {
 
 .main-container {
     display: block;
-    width: 100vw;
+    width: 100%;
     margin: 0 auto;
+    overflow: hidden;
 }
 
 .container {
     display: block;
     float: left;
-    padding: 20px;
-    max-width: 100%;
+    padding: 20px 10px 0 50px;
     margin: 0 auto;
     max-width: 1198px;
+    width: 100%;
+    
 }
 
 header {
     background: #fff;
     display: block;
     float: left;
-    padding: 20px;
+    padding: 20px 0;
     width: 100%;
     border-bottom: 1px solid #254159;
 }
@@ -106,7 +108,7 @@ section {
     display: block;
     float: left;
     font-size: 1.5rem; /* equivalente a 15px */ 
-    padding: 20px;
+    padding: 20px 0;
     width: 100%;
 }
 
@@ -146,7 +148,7 @@ footer {
     background-color: #254159;  
     display: block;
     float: left;
-    padding: 20px;
+    padding: 20px 0;
     width: 100%;
 }
 
@@ -200,4 +202,99 @@ footer small {
         padding-left: 1%;
         padding-right: 1%;
     }
+
+}
+
+#banner {
+    background-image: url('../images/banner.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 100vw;
+    height: 60vh;
+}
+
+.legenda-container {
+    width: 30vw;
+    float: right;
+    margin: 10vh 10vh 0 0;
+    
+}
+
+.legenda {
+    background-color: rgba(255, 255, 255,.6);
+    padding: 20px;
+    border-radius: 5px;
+    margin-bottom: 3rem;
+    
+}
+
+.legenda h5,
+.legenda h4 {
+    color: #254159;
+    line-height: 150%;
+
+}
+
+.button-cta {
+    border-radius: 25px;
+    display: inline;
+    background-color: orangered;
+    color: #fff;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    padding: 10px 15px;
+    box-shadow: 1px 1px 4px  black;
+    width: auto;
+    text-decoration: none;
+    font-weight: 300;
+    float: right;
+    
+}
+
+#saiba-mais {
+    background-color: #eaeff3;
+    padding: 40px 0;
+}
+
+#saiba-mais p,
+#saiba-mais img {
+    width: 45%;
+    display: block;
+    float: left;
+    padding: 20px;
+}
+
+dl {
+    margin: 20px 0;
+}
+
+dt{
+    font-family: 'Open Sans';
+    font-weight: 700;
+    font-size: 1.6rem;
+}
+
+dd{
+    margin-left: 20px;
+    margin-bottom: 20px;
+    font-size: 1.4rem;
+
+}
+
+.button-cta-dl{
+    border-radius: 25px;
+    display: inline;
+    background-color: orangered;
+    color: #fff;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    padding: 10px 15px;
+    margin-bottom: 20px;
+    box-shadow: 1px 1px 4px  black;
+    width: auto;
+    text-decoration: none;
+    font-weight: 300;
+    float: left;
+    
 }
